--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -218,6 +218,33 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
+        "emacspeak_002dgridtext.html#index-_003cfn_003e-_0023-a"><code>
+        &lt;fn&gt; # a</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
+        "emacspeak_002dgridtext.html#index-_003cfn_003e-_0023-l"><code>
+        &lt;fn&gt; # l</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
+        "emacspeak_002dgridtext.html#index-_003cfn_003e-_0023-s"><code>
+        &lt;fn&gt; # s</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
         "emacspeak_002dspeak.html#index-_003cfn_003e-_0024"><code>&lt;fn&gt;
         $</code></a>:</td>
         <td>&nbsp;</td>
@@ -1703,11 +1730,11 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
-        "emacspeak.html#index-_003cfn_003e-o"><code>&lt;fn&gt;
+        "emacspeak_002dcomint.html#index-_003cfn_003e-o"><code>&lt;fn&gt;
         o</code></a>:</td>
         <td>&nbsp;</td>
         <td valign="top"><a href=
-        "emacspeak.html">emacspeak</a></td>
+        "emacspeak_002dcomint.html">emacspeak-comint</a></td>
       </tr>
       <tr>
         <td></td>
@@ -3487,6 +3514,33 @@
         <td>&nbsp;</td>
         <td valign="top"><a href=
         "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
+        "emacspeak_002dgridtext.html#index-C_002de-_0023-a"><code>C-e
+        # a</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
+        "emacspeak_002dgridtext.html#index-C_002de-_0023-l"><code>C-e
+        # l</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
+        "emacspeak_002dgridtext.html#index-C_002de-_0023-s"><code>C-e
+        # s</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
       </tr>
       <tr>
         <td></td>
@@ -5339,11 +5393,11 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
-        "emacspeak.html#index-C_002de-o"><code>C-e
+        "emacspeak_002dcomint.html#index-C_002de-o"><code>C-e
         o</code></a>:</td>
         <td>&nbsp;</td>
         <td valign="top"><a href=
-        "emacspeak.html">emacspeak</a></td>
+        "emacspeak_002dcomint.html">emacspeak-comint</a></td>
       </tr>
       <tr>
         <td></td>
