--- a/manual/emacspeak_002dbookshare.html
+++ b/manual/emacspeak_002dbookshare.html
@@ -103,6 +103,34 @@
     </div>
     <div class="subsection" id="Sample-Interaction">
       <h4 class="subsection">12.22.3 Sample Interaction</h4>
+      <p>Assuming you have correctly setup your API key:</p>
+      <ul>
+        <li>Customize group <code>emacspeak-bookshare</code> by
+        pressing <kbd>C-h G</kbd>.</li>
+        <li>Press <kbd>C-e C-b</kbd> to open or switch to the
+        Bookshare buffer.</li>
+        <li>Perform a search <kbd>a</kbd> or <kbd>t</kbd> for
+        author or title search.</li>
+        <li>You will be prompted for your Bookshare password if
+        this is the first time.</li>
+        <li>The password will be saved to your configured
+        <code>auth-source</code> — usually
+        <code>~/.authinfo.gpg</code>. You can also use
+        <code>password-store[.]</code></li>
+        <li>The results of the search appear in the Bookshare
+        buffer. Audio formatting and auditory icons convey if a
+        result is already available locally.</li>
+        <li>If not available locally, press <kbd>D</kbd> to
+        download the content.</li>
+        <li>Press <kbd>U</kbd> to unpack the downloaded
+        content.</li>
+        <li>Press <kbd>e</kbd> to display the entire book.</li>
+        <li>Press <kbd>c</kbd> to display the table of
+        contents.</li>
+        <li>Now, use all of EWW See <a href=
+        "emacspeak_002deww.html">emacspeak-eww</a> extensions and
+        profit!</li>
+      </ul>
     </div>
     <div class="subsection" id="Emacspeak_002dBookshare-Commands">
       <h4 class="subsection">12.22.4 Emacspeak-Bookshare
