--- a/manual/emacspeak_002dcalendar.html
+++ b/manual/emacspeak_002dcalendar.html
@@ -69,7 +69,10 @@
     <hr />
     <span id="emacspeak_002dcalendar-1"></span>
     <h3 class="section">12.29 emacspeak-calendar</h3>
-    <p>This module speech enables the Emacs Calendar.</p>
+    <p>This module speech enables the Emacs Calendar. Speech
+    enabling is not the same as speaking the screen: This is an
+    excellent example of the advantages of speech-enabled
+    interaction.</p>
     <ul class="section-toc">
       <li><a href="#Emacspeak_002dCalendar-Commands" accesskey=
       "1">Emacspeak-Calendar Commands</a></li>
