--- a/manual/emacspeak_002dcompany.html
+++ b/manual/emacspeak_002dcompany.html
@@ -69,9 +69,9 @@
     <hr />
     <span id="emacspeak_002dcompany-1"></span>
     <h3 class="section">12.37 emacspeak-company</h3>
-    <p>COMPANY -mode: Complete Anything Support for emacs.</p>
-    <p>This module provides an Emacspeak Company Front-end, And
-    advises the needed interactive commands in Company. It adds an
+    <p>COMPANY -mode: Complete Anything Support for emacs. This
+    module provides an Emacspeak Company Front-end, And advises the
+    needed interactive commands in Company. It adds an
     emacspeak-specific front-end
     <code>emacspeak-company-frontend</code> to the value of
     company-frontends. Note that <var>company-frontends</var> is a
