--- a/manual/emacspeak_002ddired.html
+++ b/manual/emacspeak_002ddired.html
@@ -69,7 +69,10 @@
     <hr />
     <span id="emacspeak_002ddired-1"></span>
     <h3 class="section">12.48 emacspeak-dired</h3>
-    <p>This module speech enables dired.</p>
+    <p>This module speech enables dired. It reduces the amount of
+    speech you hear: Typically you hear the file names as you move
+    through the dired buffer Voicification is used to indicate
+    directories, marked files etc.</p>
     <ul class="section-toc">
       <li><a href="#Emacspeak_002dDired-Commands" accesskey=
       "1">Emacspeak-Dired Commands</a></li>
