--- a/manual/emacspeak_002dgnus.html
+++ b/manual/emacspeak_002dgnus.html
@@ -71,7 +71,10 @@
     <h3 class="section">12.88 emacspeak-gnus</h3>
     <p>This module advises gnus to speak. Updating support in 2014
     (Emacspeak is nearly 20 years old) Updating in 2018 as I switch
-    to gnus as my primary mail interface.</p>
+    to gnus as my primary mail interface. These customizations to
+    gnus make it convenient to listen to news: You can read news
+    mostly by using the four arrow keys. By default all article
+    headers are hidden, so you hear the real news.</p>
     <ul class="section-toc">
       <li><a href="#Emacspeak_002dGnus-Commands" accesskey=
       "1">Emacspeak-Gnus Commands</a></li>
@@ -192,6 +195,18 @@
         </dd>
       </dl>
     </div>
+  </div>
+  <hr />
+  <div class="header">
+    <p>Next: <a href=
+    "emacspeak_002dgo_002dmode.html">emacspeak-go-mode</a>,
+    Previous: <a href=
+    "emacspeak_002dgnuplot.html">emacspeak-gnuplot</a>, Up:
+    <a href="Emacspeak-Commands-And-Options.html">Emacspeak
+    Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
   </div>
 </body>
 </html>
