--- a/manual/emacspeak_002dgridtext.html
+++ b/manual/emacspeak_002dgridtext.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!-- Created by GNU Texinfo 6.8, https://www.gnu.org/software/texinfo/ -->
 <head>
@@ -110,7 +110,15 @@
           '#index-emacspeak_002dgridtext_002dapply' class=
           'copiable-anchor'>¶</a></span></dt>
           <dd>
-            <span id=
+            <dl compact="compact">
+              <dt id='index-C_002de-_0023-a'><span><kbd>C-e #
+              a</kbd> <a href='#index-C_002de-_0023-a' class=
+              'copiable-anchor'>¶</a></span></dt>
+              <dt id='index-_003cfn_003e-_0023-a'>
+              <span><kbd>&lt;fn&gt; # a</kbd> <a href=
+              '#index-_003cfn_003e-_0023-a' class=
+              'copiable-anchor'>¶</a></span></dt>
+            </dl><span id=
             "index-emacspeak_002dgridtext_002dapply-1"></span>
             <div class="format">
               <pre class="format">Apply grid to region.
@@ -133,7 +141,15 @@
           '#index-emacspeak_002dgridtext_002dload' class=
           'copiable-anchor'>¶</a></span></dt>
           <dd>
-            <span id=
+            <dl compact="compact">
+              <dt id='index-C_002de-_0023-l'><span><kbd>C-e #
+              l</kbd> <a href='#index-C_002de-_0023-l' class=
+              'copiable-anchor'>¶</a></span></dt>
+              <dt id='index-_003cfn_003e-_0023-l'>
+              <span><kbd>&lt;fn&gt; # l</kbd> <a href=
+              '#index-_003cfn_003e-_0023-l' class=
+              'copiable-anchor'>¶</a></span></dt>
+            </dl><span id=
             "index-emacspeak_002dgridtext_002dload-1"></span>
             <div class="format">
               <pre class="format">Load saved grid settings.
@@ -156,7 +172,15 @@
           '#index-emacspeak_002dgridtext_002dsave' class=
           'copiable-anchor'>¶</a></span></dt>
           <dd>
-            <span id=
+            <dl compact="compact">
+              <dt id='index-C_002de-_0023-s'><span><kbd>C-e #
+              s</kbd> <a href='#index-C_002de-_0023-s' class=
+              'copiable-anchor'>¶</a></span></dt>
+              <dt id='index-_003cfn_003e-_0023-s'>
+              <span><kbd>&lt;fn&gt; # s</kbd> <a href=
+              '#index-_003cfn_003e-_0023-s' class=
+              'copiable-anchor'>¶</a></span></dt>
+            </dl><span id=
             "index-emacspeak_002dgridtext_002dsave-1"></span>
             <div class="format">
               <pre class="format">Save out grid settings.
@@ -168,6 +192,17 @@
         </dl>
       </div>
     </div>
+  </div>
+  <hr />
+  <div class="header">
+    <p>Next: <a href=
+    "emacspeak_002dgtags.html">emacspeak-gtags</a>, Previous:
+    <a href="emacspeak_002dgoogle.html">emacspeak-google</a>, Up:
+    <a href="Emacspeak-Commands-And-Options.html">Emacspeak
+    Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
   </div>
 </body>
 </html>
