--- a/manual/emacspeak_002dhydra.html
+++ b/manual/emacspeak_002dhydra.html
@@ -69,6 +69,9 @@
     <hr />
     <span id="emacspeak_002dhydra-1"></span>
     <h3 class="section">12.100 emacspeak-hydra</h3>
+    <p>Speech-enable package hydra: For uses of hydra see module
+    See <a href=
+    "emacspeak_002dmuggles.html">emacspeak-muggles</a>.</p>
     <ul class="section-toc">
       <li><a href="#Emacspeak_002dHydra-Commands" accesskey=
       "1">Emacspeak-Hydra Commands</a></li>
