--- a/manual/emacspeak_002dlibrivox.html
+++ b/manual/emacspeak_002dlibrivox.html
@@ -85,8 +85,18 @@
     <div class="subsection" id="Usage-1">
       <h4 class="subsection">12.113.1 Usage</h4>
       <p>main entry point is command
-      <code>emacspeak-librivox</code> bound to <kbd>C-;
-      l</kbd>.</p>
+      <code>emacspeak-librivox</code> bound to <kbd>C-; l</kbd>.
+      This prompts with the following choices:</p>
+      <ul>
+        <li><kbd>a</kbd> Author — Search by Author.</li>
+        <li><kbd>t</kbd> Title — Search by Title.</li>
+        <li><kbd>g</kbd> Genre — Search by Genre — with minibuffer
+        completion.</li>
+        <li><kbd>p</kbd> Play — Play a book.</li>
+        <li><kbd>d</kbd> Directory — Browse local cache.</li>
+      </ul>
+      <p>Search results are displayed in a Web page that provides
+      controls for accessing the book.</p>
     </div>
     <div class="subsection" id="Emacspeak_002dLibrivox-Commands">
       <h4 class="subsection">12.113.2 Emacspeak-Librivox
