--- a/manual/emacspeak_002dmaths.html
+++ b/manual/emacspeak_002dmaths.html
@@ -101,7 +101,27 @@
       <p>Note: In general, once everything is configured correctly,
       using the maths navigator automatically starts the server and
       client. Invoke the Navigator using <kbd>s-spc</kbd> — this is
-      the &lt;windows&gt; key on Linux laptops.</p>
+      the &lt;windows&gt; key on Linux laptops. Linux. Now you can
+      use these keys:</p>
+      <ul>
+        <li>Show Output &lt;o&gt; Switch to output buffer and quit
+        Maths Navigator</li>
+        <li>Enter: &lt;SPC&gt; Enter a LaTeX expression.</li>
+        <li>Smart-Enter: &lt;enter&gt; Enter the guessed expression
+        with no prompting.</li>
+        <li>Alt-Text &lt;a&gt; Process alt-text under point as
+        LaTeX.</li>
+        <li>Down &lt;down&gt; Move down a level.</li>
+        <li>Up &lt;up&gt; Move up a level.</li>
+        <li>Left &lt;left&gt; Move left.</li>
+        <li>Right &lt;right&gt; Move right.</li>
+        <li>Exit &lt;any other key&gt; Exit navigator.</li>
+      </ul>
+      <p>The current expression is spoken after each of the above
+      commands. It is also displayed in a special buffer *Spoken
+      Math*. That buffer holds all previously generated output, And
+      Emacs commands forward-page and backward-page can be used to
+      move through each chunk of output.</p>
     </div>
     <div class="subsection" id="Emacspeak_002dMaths-Commands">
       <h4 class="subsection">12.121.3 Emacspeak-Maths Commands</h4>
