--- a/manual/emacspeak_002dsetup.html
+++ b/manual/emacspeak_002dsetup.html
@@ -69,7 +69,14 @@
     <hr />
     <span id="emacspeak_002dsetup-1"></span>
     <h3 class="section">12.166 emacspeak-setup</h3>
-    <p>Entry point for Emacspeak.</p>
+    <p>Entry point for Emacspeak. The simplest and most basic way
+    to start emacspeak is: emacs -q -l
+    &lt;emacspeak-dir&gt;/lisp/emacspeak-setup.el The above starts
+    a vanilla Emacs with just Emacspeak loaded. Once the above has
+    been verified to work, You can add (load-library
+    "emacspeak-setup") To your .emacs file. See
+    tvr/emacs-startup.el in the Emacspeak Git repository for my
+    setup.</p>
   </div>
 </body>
 </html>
