--- a/manual/xbacklight.html
+++ b/manual/xbacklight.html
@@ -72,6 +72,8 @@
     <p>Provide an emacs front-end to xbacklight. This is a tool
     that controls the brightness on laptops. To install xbacklight,
     sudo apt-get install xbacklight</p>
+    <p>This module is most easily used in conjunction with hydra:
+    M-x package-install hydra</p>
     <ul class="section-toc">
       <li><a href="#Xbacklight-Commands" accesskey="1">Xbacklight
       Commands</a></li>
