--- a/manual/emacspeak_002dcomint.html
+++ b/manual/emacspeak_002dcomint.html
@@ -87,9 +87,13 @@
         "#emacspeak_002dtoggle_002dcomint_002dautospeak" accesskey=
         "2">emacspeak-toggle-comint-autospeak</a></li>
         <li><a href=
+        "#emacspeak_002dtoggle_002dcomint_002doutput_002dmonitor"
+        accesskey=
+        "3">emacspeak-toggle-comint-output-monitor</a></li>
+        <li><a href=
         "#emacspeak_002dtoggle_002dinaudible_002dor_002dcomint_002dautospeak"
         accesskey=
-        "3">emacspeak-toggle-inaudible-or-comint-autospeak</a></li>
+        "4">emacspeak-toggle-inaudible-or-comint-autospeak</a></li>
       </ul>
       <div class="subsubsection" id=
       "emacspeak_002dcompletion_002dpick_002dcompletion">
@@ -141,8 +145,38 @@ Interactive PREFIX arg means toggle  global default value.
         </dl>
       </div>
       <div class="subsubsection" id=
-      "emacspeak_002dtoggle_002dinaudible_002dor_002dcomint_002dautospeak">
+      "emacspeak_002dtoggle_002dcomint_002doutput_002dmonitor">
         <h4 class="subsubsection">12.36.1.3
+        emacspeak-toggle-comint-output-monitor</h4>
+        <dl class="def">
+          <dt id=
+          "index-emacspeak_002dtoggle_002dcomint_002doutput_002dmonitor">
+          <span class="category">Command:</span>
+          <span><strong>emacspeak-toggle-comint-output-monitor</strong>
+          <em>(&amp;optional prefix)</em> <a href=
+          '#index-emacspeak_002dtoggle_002dcomint_002doutput_002dmonitor'
+          class='copiable-anchor'>¶</a></span></dt>
+          <dd>
+            <dl compact="compact">
+              <dt id='index-C_002de-o'><span><kbd>C-e o</kbd>
+              <a href='#index-C_002de-o' class=
+              'copiable-anchor'>¶</a></span></dt>
+              <dt id='index-_003cfn_003e-o'><span><kbd>&lt;fn&gt;
+              o</kbd> <a href='#index-_003cfn_003e-o' class=
+              'copiable-anchor'>¶</a></span></dt>
+            </dl><span id=
+            "index-emacspeak_002dtoggle_002dcomint_002doutput_002dmonitor-1"></span>
+            <div class="format">
+              <pre class="format">Toggle  Emacspeak comint monitor.
+Interactive PREFIX arg means toggle the global default value. 
+</pre>
+            </div>
+          </dd>
+        </dl>
+      </div>
+      <div class="subsubsection" id=
+      "emacspeak_002dtoggle_002dinaudible_002dor_002dcomint_002dautospeak">
+        <h4 class="subsubsection">12.36.1.4
         emacspeak-toggle-inaudible-or-comint-autospeak</h4>
         <dl class="def">
           <dt id=
