--- a/manual/emacspeak_002depub.html
+++ b/manual/emacspeak_002depub.html
@@ -75,10 +75,16 @@
       <li><a href="#Organizing-EBooks-On-The-Emacspeak-Desktop"
       accesskey="2">Organizing EBooks On The Emacspeak
       Desktop</a></li>
+      <li><a href="#Integrating-With-Project-Gutenberg" accesskey=
+      "3">Integrating With Project Gutenberg</a></li>
+      <li><a href="#Calibre-Integration" accesskey="4">Calibre
+      Integration</a></li>
+      <li><a href="#Reading-EBooks-From-The-Bookshelf" accesskey=
+      "5">Reading EBooks From The Bookshelf</a></li>
       <li><a href="#Emacspeak_002dEpub-Commands" accesskey=
-      "3">Emacspeak-Epub Commands</a></li>
+      "6">Emacspeak-Epub Commands</a></li>
       <li><a href="#emacspeak_002depub-Options" accesskey=
-      "4">emacspeak-epub Options</a></li>
+      "7">emacspeak-epub Options</a></li>
     </ul>
     <div class="subsection" id="Introduction-2">
       <h4 class="subsection">12.67.1 Introduction</h4>
@@ -115,10 +121,148 @@
       specific directory (with sub-directories as needed).
       Customize user option
       <code>emacspeak-epub-library-directory</code> to point to
-      this location. Here is a quick summary of commands for</p>
+      this location. Here is a quick summary of commands for
+      organizing, saving and opening a bookshelf:</p>
+      <dl compact="compact">
+        <dt><span><kbd>a</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-add-epub</p>
+        </dd>
+        <dt><span><kbd>b</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-open</p>
+        </dd>
+        <dt><span><kbd>c</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-clear</p>
+        </dd>
+        <dt><span><kbd>d</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-remove-this-book</p>
+        </dd>
+        <dt><span><kbd>r</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-rename</p>
+        </dd>
+        <dt><span><kbd>l</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-locate-epubs</p>
+        </dd>
+        <dt><span><kbd>C-a</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-add-directory</p>
+        </dd>
+        <dt><span><kbd>C-d</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-remove-directory</p>
+        </dd>
+        <dt><span><kbd>C-l</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-redraw</p>
+        </dd>
+        <dt><span><kbd>C-o</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-open-epub</p>
+        </dd>
+        <dt><span><kbd>M-s</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-save</p>
+        </dd>
+        <dt><span><kbd>C-x C-q</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-refresh</p>
+        </dd>
+        <dt><span><kbd>C-x C-s</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-save</p>
+        </dd>
+      </dl>
+    </div>
+    <div class="subsection" id=
+    "Integrating-With-Project-Gutenberg">
+      <h4 class="subsection">12.67.3 Integrating With Project
+      Gutenberg</h4>
+      <p>Gutenberg integration provides one-shot commands for
+      downloading the latest copy of the Gutenberg catalog and
+      finding and downloading the desired epub for offline
+      reading.</p>
+      <dl compact="compact">
+        <dt><span><kbd>C</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-gutenberg-catalog</p>
+        </dd>
+        <dt><span><kbd>g</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-gutenberg-download</p>
+        </dd>
+      </dl>
+      <p>Once downloaded, these EBooks can be organized under
+      <code>emacspeak-epub-library-directory</code> For more
+      advanced usage, see the next section on integrating with
+      Calibre catalogs.</p>
+    </div>
+    <div class="subsection" id="Calibre-Integration">
+      <h4 class="subsection">12.67.4 Calibre Integration</h4>
+      <p>Project Calibre enables the indexing and searching of
+      large EBook collections. Read the Calibre documentation for
+      organizing and indexing your EBook library. See user options
+      named <code>emacspeak-epub-calibre-*</code> for customizing
+      emacspeak to work with Calibre. Once set up, Calibre
+      integration provides the following commands from the
+      <em>bookshelf</em> buffer:</p>
+      <dl compact="compact">
+        <dt><span><kbd>/</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-calibre-results</p>
+        </dd>
+        <dt><span><kbd>A</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-calibre-author</p>
+        </dd>
+        <dt><span><kbd>S</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-calibre-search</p>
+        </dd>
+        <dt><span><kbd>T</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-bookshelf-calibre-title</p>
+        </dd>
+      </dl>
+    </div>
+    <div class="subsection" id="Reading-EBooks-From-The-Bookshelf">
+      <h4 class="subsection">12.67.5 Reading EBooks From The
+      Bookshelf</h4>
+      <p>The most efficient means to read an EBook is to have EWW
+      render the entire book — this works well even for very large
+      EBooks given that EWW is efficient at rendering HTML.
+      Rendering the entire book means that all of the contents are
+      available for searching. To view an EBook in its entirety,
+      use command <code>emacspeak-epub-eww</code>. You can open the
+      EPub table of contents with command
+      <code>emacspeak-epub-open</code>; for a well-constructed
+      epub, this TOC should provide hyperlinks to each section
+      listed in the table of contents.</p>
+      <dl compact="compact">
+        <dt><span><kbd>RET</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-eww</p>
+        </dd>
+        <dt><span><kbd>e</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-eww</p>
+        </dd>
+        <dt><span><kbd>f</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-browse-files</p>
+        </dd>
+        <dt><span><kbd>o</kbd></span></dt>
+        <dd>
+          <p>emacspeak-epub-open</p>
+        </dd>
+      </dl>
     </div>
     <div class="subsection" id="Emacspeak_002dEpub-Commands">
-      <h4 class="subsection">12.67.3 Emacspeak-Epub Commands</h4>
+      <h4 class="subsection">12.67.6 Emacspeak-Epub Commands</h4>
       <ul class="section-toc">
         <li><a href="#emacspeak_002dcalibre_002dmode" accesskey=
         "1">emacspeak-calibre-mode</a></li>
@@ -199,7 +343,7 @@
       </ul>
       <div class="subsubsection" id=
       "emacspeak_002dcalibre_002dmode">
-        <h4 class="subsubsection">12.67.3.1
+        <h4 class="subsubsection">12.67.6.1
         emacspeak-calibre-mode</h4>
         <dl class="def">
           <dt id="index-emacspeak_002dcalibre_002dmode">
@@ -227,7 +371,7 @@ final or penultimate step during initialization.
         </dl>
       </div>
       <div class="subsubsection" id="emacspeak_002depub-2">
-        <h4 class="subsubsection">12.67.3.2 emacspeak-epub</h4>
+        <h4 class="subsubsection">12.67.6.2 emacspeak-epub</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub"><span class=
           "category">Command:</span>
@@ -254,7 +398,7 @@ root directory,see M-x emacspeak-epub-mode
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dadd_002ddirectory">
-        <h4 class="subsubsection">12.67.3.3
+        <h4 class="subsubsection">12.67.6.3
         emacspeak-epub-bookshelf-add-directory</h4>
         <dl class="def">
           <dt id=
@@ -281,7 +425,7 @@ Interactive prefix arg searches recursively in directory.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dadd_002depub">
-        <h4 class="subsubsection">12.67.3.4
+        <h4 class="subsubsection">12.67.6.4
         emacspeak-epub-bookshelf-add-epub</h4>
         <dl class="def">
           <dt id=
@@ -307,7 +451,7 @@ Interactive prefix arg searches recursively in directory.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dcalibre_002dauthor">
-        <h4 class="subsubsection">12.67.3.5
+        <h4 class="subsubsection">12.67.6.5
         emacspeak-epub-bookshelf-calibre-author</h4>
         <dl class="def">
           <dt id=
@@ -333,7 +477,7 @@ Interactive prefix arg searches recursively in directory.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dcalibre_002dsearch">
-        <h4 class="subsubsection">12.67.3.6
+        <h4 class="subsubsection">12.67.6.6
         emacspeak-epub-bookshelf-calibre-search</h4>
         <dl class="def">
           <dt id=
@@ -359,7 +503,7 @@ Interactive prefix arg searches recursively in directory.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dcalibre_002dtitle">
-        <h4 class="subsubsection">12.67.3.7
+        <h4 class="subsubsection">12.67.6.7
         emacspeak-epub-bookshelf-calibre-title</h4>
         <dl class="def">
           <dt id=
@@ -385,7 +529,7 @@ Interactive prefix arg searches recursively in directory.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dclear">
-        <h4 class="subsubsection">12.67.3.8
+        <h4 class="subsubsection">12.67.6.8
         emacspeak-epub-bookshelf-clear</h4>
         <dl class="def">
           <dt id=
@@ -407,7 +551,7 @@ Interactive prefix arg searches recursively in directory.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dload">
-        <h4 class="subsubsection">12.67.3.9
+        <h4 class="subsubsection">12.67.6.9
         emacspeak-epub-bookshelf-load</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002dbookshelf_002dload">
@@ -429,7 +573,7 @@ Interactive prefix arg searches recursively in directory.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dopen">
-        <h4 class="subsubsection">12.67.3.10
+        <h4 class="subsubsection">12.67.6.10
         emacspeak-epub-bookshelf-open</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002dbookshelf_002dopen">
@@ -453,7 +597,7 @@ Interactive prefix arg searches recursively in directory.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dopen_002depub">
-        <h4 class="subsubsection">12.67.3.11
+        <h4 class="subsubsection">12.67.6.11
         emacspeak-epub-bookshelf-open-epub</h4>
         <dl class="def">
           <dt id=
@@ -479,7 +623,7 @@ Interactive prefix arg searches recursively in directory.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dredraw">
-        <h4 class="subsubsection">12.67.3.12
+        <h4 class="subsubsection">12.67.6.12
         emacspeak-epub-bookshelf-redraw</h4>
         <dl class="def">
           <dt id=
@@ -505,7 +649,7 @@ Optional interactive prefix arg author-first prints author at the
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002drefresh">
-        <h4 class="subsubsection">12.67.3.13
+        <h4 class="subsubsection">12.67.6.13
         emacspeak-epub-bookshelf-refresh</h4>
         <dl class="def">
           <dt id=
@@ -527,7 +671,7 @@ Optional interactive prefix arg author-first prints author at the
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dremove_002ddirectory">
-        <h4 class="subsubsection">12.67.3.14
+        <h4 class="subsubsection">12.67.6.14
         emacspeak-epub-bookshelf-remove-directory</h4>
         <dl class="def">
           <dt id=
@@ -554,7 +698,7 @@ Interactive prefix arg searches recursively in directory.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dremove_002dthis_002dbook">
-        <h4 class="subsubsection">12.67.3.15
+        <h4 class="subsubsection">12.67.6.15
         emacspeak-epub-bookshelf-remove-this-book</h4>
         <dl class="def">
           <dt id=
@@ -579,7 +723,7 @@ No book files are deleted.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002drename">
-        <h4 class="subsubsection">12.67.3.16
+        <h4 class="subsubsection">12.67.6.16
         emacspeak-epub-bookshelf-rename</h4>
         <dl class="def">
           <dt id=
@@ -605,7 +749,7 @@ Interactive prefix arg ‘overwrite’ will overwrite existing file.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbookshelf_002dsave">
-        <h4 class="subsubsection">12.67.3.17
+        <h4 class="subsubsection">12.67.6.17
         emacspeak-epub-bookshelf-save</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002dbookshelf_002dsave">
@@ -626,7 +770,7 @@ Interactive prefix arg ‘overwrite’ will overwrite existing file.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dbrowse_002dfiles">
-        <h4 class="subsubsection">12.67.3.18
+        <h4 class="subsubsection">12.67.6.18
         emacspeak-epub-browse-files</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002dbrowse_002dfiles">
@@ -651,7 +795,7 @@ Useful if table of contents in toc.ncx is empty.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dcalibre_002ddired_002dat_002dpoint">
-        <h4 class="subsubsection">12.67.3.19
+        <h4 class="subsubsection">12.67.6.19
         emacspeak-epub-calibre-dired-at-point</h4>
         <dl class="def">
           <dt id=
@@ -675,7 +819,7 @@ Useful if table of contents in toc.ncx is empty.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dcalibre_002dresults">
-        <h4 class="subsubsection">12.67.3.20
+        <h4 class="subsubsection">12.67.6.20
         emacspeak-epub-calibre-results</h4>
         <dl class="def">
           <dt id=
@@ -698,7 +842,7 @@ Useful if table of contents in toc.ncx is empty.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002ddelete">
-        <h4 class="subsubsection">12.67.3.21
+        <h4 class="subsubsection">12.67.6.21
         emacspeak-epub-delete</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002ddelete"><span class=
@@ -717,7 +861,7 @@ Useful if table of contents in toc.ncx is empty.
         </dl>
       </div>
       <div class="subsubsection" id="emacspeak_002depub_002deww">
-        <h4 class="subsubsection">12.67.3.22
+        <h4 class="subsubsection">12.67.6.22
         emacspeak-epub-eww</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002deww"><span class=
@@ -743,7 +887,7 @@ in the epub file.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dgoogle">
-        <h4 class="subsubsection">12.67.3.23
+        <h4 class="subsubsection">12.67.6.23
         emacspeak-epub-google</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002dgoogle"><span class=
@@ -767,7 +911,7 @@ in the epub file.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dgutenberg_002dcatalog">
-        <h4 class="subsubsection">12.67.3.24
+        <h4 class="subsubsection">12.67.6.24
         emacspeak-epub-gutenberg-catalog</h4>
         <dl class="def">
           <dt id=
@@ -792,7 +936,7 @@ Fetch if needed, or if refresh is T.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dgutenberg_002ddownload">
-        <h4 class="subsubsection">12.67.3.25
+        <h4 class="subsubsection">12.67.6.25
         emacspeak-epub-gutenberg-download</h4>
         <dl class="def">
           <dt id=
@@ -819,7 +963,7 @@ With interactive prefix arg ‘download’, download the epub.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dlocate_002depubs">
-        <h4 class="subsubsection">12.67.3.26
+        <h4 class="subsubsection">12.67.6.26
         emacspeak-epub-locate-epubs</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002dlocate_002depubs">
@@ -841,7 +985,7 @@ With interactive prefix arg ‘download’, download the epub.
         </dl>
       </div>
       <div class="subsubsection" id="emacspeak_002depub_002dmode">
-        <h4 class="subsubsection">12.67.3.27
+        <h4 class="subsubsection">12.67.6.27
         emacspeak-epub-mode</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002dmode"><span class=
@@ -896,7 +1040,7 @@ or penultimate step during initialization.
         </dl>
       </div>
       <div class="subsubsection" id="emacspeak_002depub_002dnext">
-        <h4 class="subsubsection">12.67.3.28
+        <h4 class="subsubsection">12.67.6.28
         emacspeak-epub-next</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002dnext"><span class=
@@ -914,7 +1058,7 @@ or penultimate step during initialization.
         </dl>
       </div>
       <div class="subsubsection" id="emacspeak_002depub_002dopen">
-        <h4 class="subsubsection">12.67.3.29
+        <h4 class="subsubsection">12.67.6.29
         emacspeak-epub-open</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002dopen"><span class=
@@ -937,7 +1081,7 @@ Filename may need to  be shell-quoted when called from Lisp.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dopen_002dwith_002dnov">
-        <h4 class="subsubsection">12.67.3.30
+        <h4 class="subsubsection">12.67.6.30
         emacspeak-epub-open-with-nov</h4>
         <dl class="def">
           <dt id=
@@ -959,7 +1103,7 @@ Filename may need to  be shell-quoted when called from Lisp.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002dprevious">
-        <h4 class="subsubsection">12.67.3.31
+        <h4 class="subsubsection">12.67.6.31
         emacspeak-epub-previous</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002dprevious">
@@ -979,7 +1123,7 @@ Filename may need to  be shell-quoted when called from Lisp.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002depub_002durl_002dexecutor">
-        <h4 class="subsubsection">12.67.3.32
+        <h4 class="subsubsection">12.67.6.32
         emacspeak-epub-url-executor</h4>
         <dl class="def">
           <dt id="index-emacspeak_002depub_002durl_002dexecutor">
@@ -1003,7 +1147,7 @@ Filename may need to  be shell-quoted when called from Lisp.
       </div>
     </div>
     <div class="subsection" id="emacspeak_002depub-Options">
-      <h4 class="subsection">12.67.4 emacspeak-epub Options</h4>
+      <h4 class="subsection">12.67.7 emacspeak-epub Options</h4>
       <dl class="def">
         <dt id="index-User-Option-22"><span class=
         "category">Variable:</span> <span><strong>User
