--- a/manual/emacspeak_002dpronounce.html
+++ b/manual/emacspeak_002dpronounce.html
@@ -78,13 +78,23 @@
     as providing the internal API used by the rest of emacspeak in
     using the dictionary.</p>
     <ul class="section-toc">
+      <li><a href="#Algorithm_003a" accesskey=
+      "1">Algorithm:</a></li>
       <li><a href="#Emacspeak_002dPronounce-Commands" accesskey=
-      "1">Emacspeak-Pronounce Commands</a></li>
+      "2">Emacspeak-Pronounce Commands</a></li>
       <li><a href="#emacspeak_002dpronounce-Options" accesskey=
-      "2">emacspeak-pronounce Options</a></li>
+      "3">emacspeak-pronounce Options</a></li>
     </ul>
+    <div class="subsection" id="Algorithm_003a">
+      <h4 class="subsection">12.147.1 Algorithm:</h4>
+      <p>The persistent dictionary is a hash table where the hash
+      keys are filenames, directory names, or major-mode names. The
+      hash values are association lists defining the dictionary.
+      Users of this module can retrieve a dictionary made up of all
+      applicable association lists for a given file.</p>
+    </div>
     <div class="subsection" id="Emacspeak_002dPronounce-Commands">
-      <h4 class="subsection">12.147.1 Emacspeak-Pronounce
+      <h4 class="subsection">12.147.2 Emacspeak-Pronounce
       Commands</h4>
       <ul class="section-toc">
         <li><a href=
@@ -131,7 +141,7 @@
       </ul>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002dclear_002ddictionaries">
-        <h4 class="subsubsection">12.147.1.1
+        <h4 class="subsubsection">12.147.2.1
         emacspeak-pronounce-clear-dictionaries</h4>
         <dl class="def">
           <dt id=
@@ -155,7 +165,7 @@
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002ddefine_002dlocal_002dpronunciation">
-        <h4 class="subsubsection">12.147.1.2
+        <h4 class="subsubsection">12.147.2.2
         emacspeak-pronounce-define-local-pronunciation</h4>
         <dl class="def">
           <dt id=
@@ -183,7 +193,7 @@ Argument ‘pron’ specifies the new pronunciation.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002ddefine_002dpronunciation">
-        <h4 class="subsubsection">12.147.1.3
+        <h4 class="subsubsection">12.147.2.3
         emacspeak-pronounce-define-pronunciation</h4>
         <dl class="def">
           <dt id=
@@ -209,7 +219,7 @@ First loads any persistent dictionaries if not already loaded.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002ddefine_002dtemplate_002dpronunciation">
-        <h4 class="subsubsection">12.147.1.4
+        <h4 class="subsubsection">12.147.2.4
         emacspeak-pronounce-define-template-pronunciation</h4>
         <dl class="def">
           <dt id=
@@ -235,7 +245,7 @@ First loads any persistent dictionaries if not already loaded.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002ddispatch">
-        <h4 class="subsubsection">12.147.1.5
+        <h4 class="subsubsection">12.147.2.5
         emacspeak-pronounce-dispatch</h4>
         <dl class="def">
           <dt id="index-emacspeak_002dpronounce_002ddispatch">
@@ -263,7 +273,7 @@ First loads any persistent dictionaries if not already loaded.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002dedit_002dpronunciations">
-        <h4 class="subsubsection">12.147.1.6
+        <h4 class="subsubsection">12.147.2.6
         emacspeak-pronounce-edit-pronunciations</h4>
         <dl class="def">
           <dt id=
@@ -290,7 +300,7 @@ specified pronunciation dictionary key.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002dload_002ddictionaries">
-        <h4 class="subsubsection">12.147.1.7
+        <h4 class="subsubsection">12.147.2.7
         emacspeak-pronounce-load-dictionaries</h4>
         <dl class="def">
           <dt id=
@@ -317,7 +327,7 @@ Default is emacspeak-pronounce-dictionaries-file.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002dmerge_002ddictionaries">
-        <h4 class="subsubsection">12.147.1.8
+        <h4 class="subsubsection">12.147.2.8
         emacspeak-pronounce-merge-dictionaries</h4>
         <dl class="def">
           <dt id=
@@ -342,7 +352,7 @@ Default is emacspeak-pronounce-dictionaries-file.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002drefresh_002dpronunciations">
-        <h4 class="subsubsection">12.147.1.9
+        <h4 class="subsubsection">12.147.2.9
         emacspeak-pronounce-refresh-pronunciations</h4>
         <dl class="def">
           <dt id=
@@ -366,7 +376,7 @@ Default is emacspeak-pronounce-dictionaries-file.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002dsave_002ddictionaries">
-        <h4 class="subsubsection">12.147.1.10
+        <h4 class="subsubsection">12.147.2.10
         emacspeak-pronounce-save-dictionaries</h4>
         <dl class="def">
           <dt id=
@@ -390,7 +400,7 @@ Default is emacspeak-pronounce-dictionaries-file.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002dtoggle_002duse_002dof_002ddictionaries">
-        <h4 class="subsubsection">12.147.1.11
+        <h4 class="subsubsection">12.147.2.11
         emacspeak-pronounce-toggle-use-of-dictionaries</h4>
         <dl class="def">
           <dt id=
@@ -416,7 +426,7 @@ Default is emacspeak-pronounce-dictionaries-file.
       </div>
       <div class="subsubsection" id=
       "emacspeak_002dpronounce_002dtoggle_002dvoice">
-        <h4 class="subsubsection">12.147.1.12
+        <h4 class="subsubsection">12.147.2.12
         emacspeak-pronounce-toggle-voice</h4>
         <dl class="def">
           <dt id=
@@ -439,7 +449,7 @@ Default is emacspeak-pronounce-dictionaries-file.
       </div>
     </div>
     <div class="subsection" id="emacspeak_002dpronounce-Options">
-      <h4 class="subsection">12.147.2 emacspeak-pronounce
+      <h4 class="subsection">12.147.3 emacspeak-pronounce
       Options</h4>
       <dl class="def">
         <dt id="index-User-Option-72"><span class=
