--- a/manual/soundscape.html
+++ b/manual/soundscape.html
@@ -84,8 +84,28 @@
     above file lists all installed SoundScapes. Directory
     emacspeak/scapes also contains additional Boodler Agents and
     SoundScapes that I have created for use with Emacspeak.</p>
-    <p>Module soundscape.el defines Emacs conveniences for
-    running</p>
+    <p>Module soundscape.el defines Emacs conveniences for running
+    Soundscapes. Main Entry Points:</p>
+    <ul>
+      <li>M-x soundscape-toggle – Enables or disables automatic
+      SoundScapes.</li>
+      <li>M-x soundscape – runs a named SoundScape</li>
+      <li>M-x soundscape-stop – Stops a specified running
+      Soundscape.</li>
+      <li>M-x soundscape-kill – Kills all running Soundscapes.</li>
+    </ul>
+    <p>When automatic Soundscapes are enabled, SoundScapes are
+    started and stopped based on the current major mode. Active
+    Soundscape are displayed as part of the minor-mode-alist.
+    Command emacspeak-speak-minor-mode-line can be used to have
+    this spoken.</p>
+    <p>Thus, SoundScapes can be thought of as reflecting the
+    <em>mood</em> of the current <em>mode</em>. This package
+    defines a single <var>soundscape-default-theme</var> that is
+    loaded using <code>(soundscape-load
+    soundscape-default-theme)</code>. Emacs modes that provide
+    similar functionality e.g., communication == email, IM, ... map
+    to the same <em>mood</em>.</p>
     <ul class="section-toc">
       <li><a href="#Soundscape-Commands" accesskey="1">Soundscape
       Commands</a></li>
